# firestarter_ui

./: .gitignore  FirestarterUI_prd.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
firestarter_ui/: __init__.py  __main__.py  firestarter_gui_app.py  firestarter_operations.py  main.py  main_window.py  operation_panels.py  ui_manager.py
