[build-system]
requires = ["setuptools>=45",  "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "firestarter-ui"
authors = [
  { name="Henrik Olsson", email="henols@gmail.com" },
]
description = "UI for the Firestarter EPROM programmer library."
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]

requires-python = ">=3.9"
keywords = [
    "firestarter",
    "eprom",
    "rom",
    "eeprom",
    "flash",
    "programmer",
    "arduino",
    "electronics",
    "retro computing",
    "retro game console",
    "commodore",
    "atari",
    "apple",
    "c64",
    "nes",
]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "firestarter>=2.0.2"
]
urls = { "Homepage" = "https://github.com/henols/firestarter_ui" }

[project.scripts]
firestarter-ui = "firestarter_ui.main_app:main"

[tool.setuptools.dynamic]
version = {attr = "firestarter_ui.__version__"}
